--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,6 @@
       "sizes": "192x192",
       "type": "image/png"
     }],
-  "start_url": "./PwaTest.html?utm_source=homescreen",
+  "start_url": "./login.html?utm_source=homescreen",
   "display": "standalone"
 }
