--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "short_name": "PWA",
   "background_color": "#ff0000",
   "icons": [{
-      "src": "./icon-256.png",
+      "src": "./static/favicons/icon-256.png",
       "sizes": "256x256",
       "type": "image/png"
     },{
-      "src": "./icon-192.png",
+      "src": "./static/favicons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }],
